# SQL_Project

Customer Database Management System/: Customer DB.ipynb
Customer Database Management System/.ipynb_checkpoints/: Joins-checkpoint.ipynb
Database Architecture and Procedure Implementation for Transactional Systems/: Database Architecture and Procedure Implementation for Transactional Systems.html  Database Architecture and Procedure Implementation for Transactional Systems.ipynb  py.ipynb
Database Architecture and Procedure Implementation for Transactional Systems/DataHarbor/: .replit  README.md  TROUBLESHOOTING.md  data_visualizer.py  database_manager.py  export_utils.py  replit.md  setup.bat
Database Architecture and Procedure Implementation for Transactional Systems/DataPilot/: QUICK_START.md  README.md  SETUP_GUIDE.md  app.py  data_generator.py  database.py  pyproject.toml  replit.md  run.bat  run.sh  start.py  utils.py
IoT Data Logging and Analysis/: IoT Data Logging & Analysis.ipynb  IoT analysis.twb  devices+ (iot_data).hyper  inserts.ipynb  notes.txt  plan.md  readme.md  tables.md  ~IoT analysis__7040.twbr
IoT Data Logging and Analysis/PgManage/: .replit  README.md  app.py  pyproject.toml  replit.md  (+4 more)
New Project/: ecom data inserts.ipynb  tables.txt
Sales Order DB Architecture with ACID-Compliant Business Logic/: DataBase Tables.ipynb  Readme.md  Sales Order DB Architecture with ACID-Compliant Business Logic.ipynb  sql.bat
Sales Order DB Architecture with ACID-Compliant Business Logic/DataHarbor/: app.py  pyproject.toml  query_executor.py  run.bat
(+18 files in other folders)
