[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "mysql-connector-python>=9.4.0",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.47.1",
    "xlsxwriter>=3.2.5",
]
